- Fixed Obsidian Panel sub-header right not being right aligned.

--- a/RockWeb/Styles/_rock-obsidian.less
+++ b/RockWeb/Styles/_rock-obsidian.less
@@ -52,6 +52,10 @@
     }
   }
 
+  .panel-sub-header > .panel-sub-header-left {
+    flex-grow: 1;
+  }
+
   .footer-secondary-actions {
     margin: 0 0 0 auto !important;
   }
